# ETF

./: .gitignore  pyproject.toml  requirements.txt
config/: data_sources.yaml  settings.yaml  strategy_params.yaml
docs/: PRD.md  README.md  开发文档.md  概要设计文档.md  用户使用手册-Windows.md
docs/plans/: 2026-02-11-etf-portfolio-analysis-system.md
docs/releases/: v0.1.0-release-notes.md
src/etf_analyzer/backtest/: engine.py  metrics.py  report.py  visualization.py
src/etf_analyzer/core/: cache.py  calendar.py  config.py  logger.py  response.py
src/etf_analyzer/formulas/: factors.py  returns.py  risk.py  technical.py  valuation.py
src/etf_analyzer/selection/: scorer.py  screener.py
src/etf_analyzer/simulation/: broker.py  dca.py  fees.py  portfolio.py
src/etf_analyzer/web/: app.py
static/css/: dashboard.css
templates/: report.html
templates/web/: backtest.html  dashboard.html  data.html  dca.html  screening.html  strategy.html
tests/: conftest.py  test_integration.py
tests/test_backtest/: test_engine.py  test_metrics.py  test_report.py
tests/test_core/: test_cache.py  test_calendar.py  test_config.py  test_response.py
tests/test_data/: test_cleaner.py  test_fetcher.py  test_store.py  test_updater.py
tests/test_formulas/: test_factors.py  test_returns.py  test_risk.py  test_technical.py  test_valuation.py
tests/test_selection/: test_scorer.py  test_screener.py
tests/test_simulation/: test_broker.py  test_dca.py  test_fees.py  test_portfolio.py
tests/test_strategy/: test_base.py  test_semi_monthly.py  test_signals.py
tests/test_web/: test_app.py
(+3 files in other folders)
